--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "framer-motion": "^12.10.3",
-    "next": "15.3.1",
+    "next": "^16.1.6",
     "openai": "^4.97.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
